added another code to improve touch

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="paper">
         <img src="images/3.jpg" alt="">
     </div>
-    <div class="paper">
+    <div class="paper image">
         <p>Drag the Paper to move</p>
     </div>
 </body>
